--- a/templates/output.html
+++ b/templates/output.html
@@ -11,19 +11,35 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <title>Document</title>
   <style>
-    
-
-  
-  </style>
+    .center {
+    padding: 30px;
+    width: 30%;
+    border: 3px solid green;
+    /* padding: 10px;
+    Vertical-Align: center; */
+    /* color: white; */
+    font-size: 40px;
+    position: absolute;
+    opacity: 1 ;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+</style>
 </head>
 <body>
-
- 
-  <h3>{{predicted_disease}}</h3>
+  <div class="center">
+    <center>
+  <h3> The predicted disease is {{predicted_disease}}</h3>
   
-  <a href="/map_display/{{predicted_disease}}"><button class="btn btn-primary">Submit</button></a>
-
-
+  <!-- <a href="/map_display/{{predicted_disease}}"><button class="btn btn-primary">Submit</button></a>
+  <button type="button" class="btn btn-success">Success</button> -->
+  <a class="btn btn-success" href="/map_display/{{predicted_disease}}" role="button">Search for nearby doctors.</a>
+</center>
+ </div>
 
 </body>
 </html>
