--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
       }
 
       li a:hover {
-        background-color: grey;
+        background-color: black;
         color: white;
       }
 
@@ -487,13 +487,13 @@
         <a class="active" href="#home">Home</a>
       </li>
       <li>
-        <a href="#news">About Us</a>
+        <!-- <a href="#news">About Us</a> -->
       </li>
       <li>
-        <a href="#news">Predict the disease</a>
+        <a href="{% url 'predict_disease' %}">Predict the disease</a>
       </li>
       <li>
-        <a href="Login.html">Login/SignUp</a>
+        <!-- <a href="Login.html">Login/SignUp</a> -->
       </li>
     </ul>
     <div class="text">
