--- a/templates/output.html
+++ b/templates/output.html
@@ -14,11 +14,11 @@
     .center {
     padding: 30px;
     width: 30%;
-    border: 3px solid green;
+    border: 3px solid black;
     /* padding: 10px;
     Vertical-Align: center; */
     /* color: white; */
-    font-size: 40px;
+    font-size: 20px;
     position: absolute;
     opacity: 1 ;
     top: 50%;
@@ -28,17 +28,94 @@
     transform: translate(-50%, -50%);
     text-align: center;
   }
+  .title {
+        color: whitesmoke;
+
+        font-family: "Mistral";
+        text-align: center;
+        font-size: 150px;
+      }
+
+      body {
+        /* background-image: url("../media/bg.jpg"); */
+        /* background-repeat: no-repeat; */
+        /* background-position: right top; */
+        /* background-attachment: fixed; */
+        /* background-size: cover; */
+        margin: 0;
+        padding: 0;
+      }
+
+      body {
+        
+        background-size: 1600px 800px;
+        background-repeat: no-repeat;
+      }
+
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: rgb(250, 249, 252);
+      }
+
+      li {
+        float: left;
+      }
+
+      #left {
+        float: right;
+      }
+
+      li a {
+        display: block;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 28px;
+        color: black;
+        font-family: "Segoe UI";
+      }
+
+      li a:hover {
+        background-color: black;
+        color: white;
+      }
+
+      * {
+        box-sizing: border-box;
+      }
 </style>
 </head>
 <body>
+  <ul>
+    <li>
+      <img src="../media/log.png" alt="" height="60px" width="60px" />
+    </li>
+    <li>
+      <a  href="{% url 'index' %}">Home</a>
+    </li>
+    <li>
+      <!-- <a href="#news">About Us</a> -->
+    </li>
+    <li>
+      <a class="active" href="{% url 'predict_disease' %}">Predict the disease</a>
+    </li>
+    <li>
+      <!-- <a href="Login.html">Login/SignUp</a> -->
+    </li>
+  </ul>
+
   <div class="center">
-    <center>
-  <h3> The predicted disease is {{predicted_disease}}</h3>
+    <!-- <center> -->
+      The predicted disease is
+  <h3>{{predicted_disease}}</h3>
   
   <!-- <a href="/map_display/{{predicted_disease}}"><button class="btn btn-primary">Submit</button></a>
   <button type="button" class="btn btn-success">Success</button> -->
-  <a class="btn btn-success" href="/map_display/{{predicted_disease}}" role="button">Search for nearby doctors.</a>
-</center>
+  <a class="btn btn-dark" href="/map_display/{{predicted_disease}}" role="button">Search for nearby doctors.</a>
+<!-- </center> -->
  </div>
 
 </body>
