--- a/templates/maps.html
+++ b/templates/maps.html
@@ -35,7 +35,7 @@
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background-color: rgb(250, 249, 252);
+        background-color: rgb(0, 0, 0);
       }
 
       li {
@@ -52,17 +52,31 @@
         padding: 14px 16px;
         text-decoration: none;
         font-size: 28px;
-        color: black;
+        color: white;
         font-family: "Segoe UI";
       }
 
       li a:hover {
-        background-color: black;
-        color: white;
+        background-color: white;
+        color: black;
       }
 
       * {
         box-sizing: border-box;
+      }
+      .map{
+        margin: 6px;        
+        /* top: 50%; */
+        /*width: 600px;
+        height: 600px;*/
+        /* border: 3px solid black; */
+        /* padding: 10px;
+        Vertical-Align: center; */
+        /* color: white; */
+        /* font-size: 20px; */
+        /* position: absolute; */
+        /*opacity: 1 ;
+        text-align: center; */
       }
     </style>
   </head>
@@ -84,6 +98,8 @@
         <!-- <a href="Login.html">Login/SignUp</a> -->
       </li>
     </ul>
+    <div class="map">
     {{ map|safe }}
+  </div>
   </body>
 </html>
