--- a/templates/output.html
+++ b/templates/output.html
@@ -52,12 +52,21 @@
         background-repeat: no-repeat;
       }
 
+      .title {
+        color: whitesmoke;
+
+        font-family: "Mistral";
+        text-align: center;
+        font-size: 150px;
+      }
+
+
       ul {
         list-style-type: none;
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background-color: rgb(250, 249, 252);
+        background-color: rgb(0, 0, 0);
       }
 
       li {
@@ -74,13 +83,13 @@
         padding: 14px 16px;
         text-decoration: none;
         font-size: 28px;
-        color: black;
+        color: white;
         font-family: "Segoe UI";
       }
 
       li a:hover {
-        background-color: black;
-        color: white;
+        background-color: white;
+        color: black;
       }
 
       * {
