--- a/templates/symptomsForm.html
+++ b/templates/symptomsForm.html
@@ -11,7 +11,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <title>Document</title>
   <style>
-          .title {
+      .title {
         color: whitesmoke;
 
         font-family: "Mistral";
@@ -20,11 +20,11 @@
       }
 
       body {
-        /* background-image: url("../media/bg.jpg"); */
-        /* background-repeat: no-repeat; */
-        /* background-position: right top; */
-        /* background-attachment: fixed; */
-        /* background-size: cover; */
+        background-image: url("../media/bg.jpg");
+        background-repeat: no-repeat;
+        background-position: right top;
+        background-attachment: fixed;
+        background-size: cover;
         margin: 0;
         padding: 0;
       }
@@ -40,7 +40,7 @@
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background-color: rgb(250, 249, 252);
+        background-color: rgb(0, 0, 0);
       }
 
       li {
@@ -57,13 +57,13 @@
         padding: 14px 16px;
         text-decoration: none;
         font-size: 28px;
-        color: black;
+        color: white;
         font-family: "Segoe UI";
       }
 
       li a:hover {
-        background-color: black;
-        color: white;
+        background-color: white;
+        color: black;
       }
 
       * {
