--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
       }
 
       body {
-        background-image: url("../media/bg.jpg");
+        background-image: url("../media/414.jpg");
         background-repeat: no-repeat;
         background-position: right top;
         background-attachment: fixed;
@@ -33,6 +33,7 @@
         padding: 0;
         overflow: hidden;
         background-color: rgb(0, 0, 0);
+        zoom:80%;
       }
 
       li {
@@ -140,11 +141,7 @@
         transition: background-color 0.6s ease;
       }
 
-      .active,
-      .dot:hover {
-        background-color: #717171;
-      }
-
+    
       /* Fading animation */
       .fade {
         -webkit-animation-name: fade;
@@ -172,7 +169,6 @@
       }
 
       #upcoming {
-        background-color: grey;
         color: black;
         font-size: 30px;
         cursor: pointer;
